trunk/Archive2/fb/331df3ac519faa/output
main.cpp:36:20: error: no member named 'error' in 'types<std::vector<int, std::allocator<int> >, std::vector<float, std::allocator<float> >, std::vector<int, std::allocator<int> > >'
        wrapped_vec_type::error();
        ~~~~~~~~~~~~~~~~~~^
1 error generated.
